# ellipsoid_psf

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  ellipsoid_psf_bindings.cpp  psfi_bindings.cpp
bindings/tests/: test_ellipsoid_psf_crisscross_py.py  test_psfi_block_low_rank_py.py  test_psfi_fast_block_py.py  test_psfi_kernel_low_rank_py.py  test_psfi_low_rank_py.py  test_psfi_moments_py.py  test_psfi_partition_py.py  test_psfi_py.py  test_psfi_rbf_py.py  test_psfi_source_target_py.py
dev/: HANDOFF.md
docs/: README.md  generate_examples.py
docs/examples/: frog_compression.md  frog_kernel.md
docs/notes/: boundary_effects.md  distributed_design.md
examples/: CMakeLists.txt  frog_compression.cpp  frog_kernel.cpp
include/ellipsoid_psf/: config.hpp  impulse_response_field.hpp  kernel_evaluator.hpp
include/psfi/: block_low_rank.hpp  impulse_response_field.hpp  kernel_evaluator.hpp  kernel_low_rank.hpp  low_rank.hpp  moments.hpp  partition.hpp  psfi.hpp  rbf.hpp
tests/: CMakeLists.txt  test_block_low_rank.cpp  test_dimensions.cpp  test_fast_block.cpp  test_impulse_response_field.cpp  test_kernel_evaluator.cpp  test_kernel_low_rank.cpp  test_low_rank.cpp  test_moments.cpp  test_partition.cpp  test_rbf.cpp  test_source_target.cpp
